--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -77,3 +77,11 @@
     $maxWidth: 1100px;
     $breakPointMax: 90%;
     $widthTotal:100%;
+
+
+
+    $breakPointMax: 90%;
+    $marginContent:150px auto;
+
+    $widthTotal:100%;
+    $margin:0px auto;
