SASS Actualizacion MediaQueries

--- a/scss/_advertising.scss
+++ b/scss/_advertising.scss
@@ -58,9 +58,9 @@
                 }
                 .accordion-body{
                     font-family: $mainFont !important;
-                    font-size: $smallTitle !important;
-                    font-weight:$boldMedium ;
-                    color:$blackColor !important;
+                    font-size: $breakText !important;
+                    font-weight: $boldMedium !important;
+                    color: $blackColor !important;
                 }
             }
         }
