--- a/scss/_faq.scss
+++ b/scss/_faq.scss
@@ -30,7 +30,7 @@
             }
             p{
                 color: rgb(199, 199, 199);
-                font-size: $smallTitle ;
+                font-size: $breakText ;
                 font-weight:$boldMedium;
                 margin: 15px auto 0px;
                 padding: 20px 20px;
