--- a/scss/_vars.scss
+++ b/scss/_vars.scss
@@ -13,6 +13,7 @@
     $regularText:1rem;
     $breakText:0.9rem;
     $smallTitle:0.8rem;
+    $breakSmallText:0.7rem;
     $xSmallParagraphText:0.6rem;
 
     // Font-weight
@@ -80,8 +81,6 @@
 
 
 
-    $breakPointMax: 90%;
-    $marginContent:150px auto;
 
-    $widthTotal:100%;
-    $margin:0px auto;
+
+
