--- a/css/main.css
+++ b/css/main.css
@@ -659,8 +659,8 @@ html .contenedor .arrow {
 }
 .bannerPublicidadDos .bannerSection .banner .accordion .accordion-body {
   font-family: "Poppins", sans-serif !important;
-  font-size: 0.8rem !important;
-  font-weight: 400;
+  font-size: 0.9rem !important;
+  font-weight: 400 !important;
   color: #0c0c0c !important;
 }
 
@@ -1237,7 +1237,7 @@ html .contenedor .arrow {
   border-bottom: 1px solid #2e2e2e;
 }
 .containerTestimony .bundleOpinion .groupLine .opinionMedium .paragraph {
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   color: #a2a2a2;
 }
 .containerTestimony .bundleOpinion .groupLine .opinionBottom {
@@ -1246,7 +1246,7 @@ html .contenedor .arrow {
   flex-direction: row;
   justify-content: space-between;
   align-items: center;
-  padding: 10px 0px;
+  padding: 30px 0px;
   position: relative;
 }
 .containerTestimony .bundleOpinion .groupLine .opinionBottom .user {
@@ -1254,11 +1254,11 @@ html .contenedor .arrow {
 }
 .containerTestimony .bundleOpinion .groupLine .opinionBottom .data {
   position: absolute;
-  top: 12px;
-  left: 60px;
+  top: 25%;
+  left: 20%;
 }
 .containerTestimony .bundleOpinion .groupLine .opinionBottom .data p {
-  font-size: 0.6rem;
+  font-size: 0.8rem;
   color: #a2a2a2;
   margin-bottom: 0px;
 }
@@ -1329,7 +1329,7 @@ html .contenedor .arrow {
 }
 .accordion .scrollDownAnswers details p {
   color: rgb(199, 199, 199);
-  font-size: 0.8rem;
+  font-size: 0.9rem;
   font-weight: 400;
   margin: 15px auto 0px;
   padding: 20px 20px;
@@ -1783,13 +1783,6 @@ html .contenedor .arrow {
   .contenedor .nosotros .containerInfo .info {
     width: 70%;
   }
-  .contenedor .contenedorEmpleos .empleosArticle {
-    width: 70%;
-    margin: 0px auto;
-  }
-  .contenedor .contenedorEmpleos .verMas {
-    width: 25%;
-  }
   .contenedor .contenedorMatch {
     width: 90%;
   }
@@ -1919,7 +1912,7 @@ html .contenedor .arrow {
     font-size: 5rem;
   }
   .contenedor .patrocinadores {
-    width: 85%;
+    width: 80%;
   }
   .contenedor .patrocinadores .empresasPatrocinadorasUno img, .contenedor .patrocinadores .empresasPatrocinadorasDos img {
     width: 85px;
@@ -2067,7 +2060,7 @@ html .contenedor .arrow {
     width: 73%;
   }
   .contenedor .nosotros {
-    max-width: 90%;
+    max-width: 100%;
     margin: 150px auto;
   }
   .contenedor .nosotros .subtitulo {
@@ -2084,7 +2077,7 @@ html .contenedor .arrow {
     font-size: 0.9rem;
   }
   .contenedor .contenedorEmpleos {
-    max-width: 90%;
+    max-width: 100%;
     margin: 150px auto;
   }
   .contenedor .contenedorEmpleos .subtitulo {
@@ -2112,7 +2105,7 @@ html .contenedor .arrow {
     font-size: 0.9rem;
   }
   .contenedor .contenedorEmpleos .jobs .empleosArticle .contenedorEmpleo .btnDesarrolladorDiseñador {
-    width: 95%;
+    width: 100%;
     font-size: 0.9rem;
     margin: 0px auto;
   }
@@ -2143,8 +2136,7 @@ html .contenedor .arrow {
     width: 65px;
   }
   .contenedor .bannerPublicidadDos {
-    max-width: 90%;
-    margin: 150px auto;
+    width: 100%;
   }
   .contenedor .bannerPublicidadDos .bannerSection .banner .itemCellphones {
     width: 100%;
@@ -2159,7 +2151,7 @@ html .contenedor .arrow {
     font-size: 0.8rem !important;
   }
   .contenedor .accordion {
-    max-width: 90%;
+    max-width: 100%;
     margin: 150px auto;
   }
   .contenedor .accordion .subtitle {
@@ -2170,10 +2162,10 @@ html .contenedor .arrow {
     font-size: 0.9rem !important;
   }
   .contenedor .accordion .scrollDownAnswers p {
-    font-size: 0.9rem !important;
+    font-size: 0.8rem !important;
   }
   .contenedor .accordion .whatsApp {
-    width: 100%;
+    width: 100% !important;
     font-size: 0.9rem;
   }
   .footer .mainFooter .footerMedium .news .accion .btnAccion {
@@ -2199,7 +2191,7 @@ html .contenedor .arrow {
     width: 90%;
   }
   .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match {
-    font-size: 2.2rem;
+    font-size: 3rem;
   }
   .footer .footerMedium .news .accion input {
     width: 100%;
@@ -2227,7 +2219,7 @@ html .contenedor .arrow {
     width: 100%;
   }
   .contenedor .contenedorMatch .bannerMatch .centerMatch .center .letterMatch .match {
-    font-size: 1.6rem;
+    font-size: 1.87rem;
   }
 }
 @media (max-width: 1250px) {
@@ -2240,6 +2232,9 @@ html .contenedor .arrow {
   .contenedor .card .contactanosDesarrolladores, .contenedor .card .contactanosDiseñadores {
     width: 20%;
   }
+  .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
+    width: 50%;
+  }
   .contenedor .accordion .whatsApp {
     width: 20%;
   }
@@ -2248,6 +2243,9 @@ html .contenedor .arrow {
   .contenedor .containerDevelopment, .contenedor .containerDesign {
     width: 70%;
     margin: 0px auto;
+  }
+  .contenedor .containerTestimony {
+    width: 100%;
   }
   .contenedor .containerTestimony .headline {
     width: 60%;
@@ -2270,13 +2268,23 @@ html .contenedor .arrow {
     width: 60%;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
-    margin: 10px auto 10px 25px;
+    top: 30%;
+    left: 20%;
+  }
+  .contenedor .containerTestimony .verMas {
+    width: 25%;
+    padding: 20px 35px;
   }
   .contenedor .accordion .whatsApp {
     width: 30%;
+    padding: 20px 35px;
   }
 }
 @media (max-width: 1000px) {
+  .contenedor .cards {
+    width: 90%;
+    background-color: aliceblue;
+  }
   .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadores {
     width: 40%;
   }
@@ -2284,19 +2292,34 @@ html .contenedor .arrow {
     width: 90%;
     margin: 0px auto;
   }
-  .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
-    width: 70%;
+  .contenedor .containerTestimony .verMas {
+    width: 25%;
   }
   .contenedor .accordion .whatsApp {
-    width: 50%;
+    width: 30%;
   }
   .contenedor .formContainer .mapa {
     display: none;
   }
 }
 @media (max-width: 850px) {
+  .contenedor {
+    background-color: aliceblue;
+  }
   .contenedor .buscadorServices {
-    width: 80%;
+    width: 90%;
+  }
+  .contenedor .cards {
+    width: 100%;
+    background-color: aliceblue;
+  }
+  .contenedor .cards .contenedorDevelopers, .contenedor .cards .contenedorDesigners {
+    width: 100%;
+    margin: auto;
+  }
+  .contenedor .cards .contenedorDevelopers .cardDev, .contenedor .cards .contenedorDevelopers .cardDesigners, .contenedor .cards .contenedorDesigners .cardDev, .contenedor .cards .contenedorDesigners .cardDesigners {
+    width: 100%;
+    margin: 5px;
   }
   .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadores {
     width: 30%;
@@ -2309,18 +2332,24 @@ html .contenedor .arrow {
     width: 80%;
     margin: 10px auto;
   }
-  .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
-    margin: 5px auto 5px 15px;
+  .contenedor .containerTestimony .verMas {
+    width: 30%;
   }
   .contenedor .accordion .whatsApp {
-    width: 50%;
+    width: 40%;
   }
 }
 @media (max-width: 767px) {
   .contenedor .cards {
     width: 100%;
     margin: 0px auto;
-    padding: 0px 30px;
+  }
+  .contenedor .cards .contenedorDevelopers, .contenedor .cards .contenedorDesigners {
+    width: 100%;
+    display: flex;
+  }
+  .contenedor .cards .contenedorDevelopers .cardDev, .contenedor .cards .contenedorDevelopers .cardDesigners, .contenedor .cards .contenedorDesigners .cardDev, .contenedor .cards .contenedorDesigners .cardDesigners {
+    min-width: 240px !important;
   }
   .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadores {
     width: 40%;
@@ -2363,22 +2392,35 @@ html .contenedor .arrow {
     width: 80%;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
-    margin: 0px auto 0px 10px;
+    top: 25%;
+    left: 20%;
   }
   .contenedor .containerTestimony .verMas {
-    width: 40%;
+    width: 35%;
   }
 }
 @media (max-width: 490px) {
   .contenedor .buscadorServices p {
     font-size: 0.9rem;
   }
-  .contenedor .cards .anuncio {
-    font-size: 0.9rem;
+  .contenedor .cards {
+    width: 90%;
+    margin: 0px auto;
+  }
+  .contenedor .cards .contenedorDevelopers, .contenedor .cards .contenedorDesigners {
+    width: 100%;
+    margin: auto;
+  }
+  .contenedor .cards .contenedorDevelopers .cardDev, .contenedor .cards .contenedorDevelopers .cardDesigners, .contenedor .cards .contenedorDesigners .cardDev, .contenedor .cards .contenedorDesigners .cardDesigners {
+    width: 100% !important;
+    row-gap: 5px;
   }
   .contenedor .cards .subtitle {
     font-size: 1.2rem;
     font-weight: 600;
+  }
+  .contenedor .cards .anuncio {
+    font-size: 0.9rem;
   }
   .contenedor .containerDevelopment .titleDevelopment, .contenedor .containerDevelopment .titleDesign, .contenedor .containerDesign .titleDevelopment, .contenedor .containerDesign .titleDesign {
     font-size: 1.2rem;
@@ -2396,8 +2438,11 @@ html .contenedor .arrow {
     font-size: 0.6rem;
   }
   .contenedor .containerDevelopment .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDevelopment .vacanciesDesign .cardJob .postulate, .contenedor .containerDesign .vacanciesDevelopment .cardJob .postulate, .contenedor .containerDesign .vacanciesDesign .cardJob .postulate {
-    width: 40%;
+    width: 100% !important;
     font-size: 0.8rem;
+  }
+  .contenedor .containerTestimony {
+    width: 90%;
   }
   .contenedor .containerTestimony .headline {
     width: 90%;
@@ -2416,25 +2461,17 @@ html .contenedor .arrow {
     width: 90%;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
-    margin: 2px auto 15px 5px;
+    top: 25%;
+    left: 20%;
+  }
+  .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data p {
+    font-size: 0.7rem;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionMedium .paragraph {
     font-size: 0.8rem;
   }
   .contenedor .containerTestimony .verMas {
     width: 90%;
-    font-size: 0.9rem;
-  }
-  .contenedor .accordion .subtitle {
-    font-size: 1.2rem;
-  }
-  .contenedor .accordion .scrollDownAnswers summary {
-    font-size: 0.9rem !important;
-  }
-  .contenedor .accordion .scrollDownAnswers p {
-    font-size: 0.9rem !important;
-  }
-  .contenedor .accordion .whatsApp {
     font-size: 0.9rem;
   }
   .contenedor .formContainer .subtitulo {
@@ -2448,10 +2485,10 @@ html .contenedor .arrow {
 }
 @media (max-width: 400px) {
   .contenedor .cards {
-    padding: 0px 10px;
+    width: 100%;
   }
   .contenedor .cards .contactanosDesarrolladores, .contenedor .cards .contactanosDiseñadores {
-    width: 80%;
+    width: 100%;
   }
   .contenedor .containerDevelopment, .contenedor .containerDesign {
     width: 100%;
@@ -2463,26 +2500,28 @@ html .contenedor .arrow {
     width: 50%;
   }
   .contenedor .containerTestimony {
-    width: 85% !important;
+    width: 90% !important;
     margin: 150px auto !important;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort {
     width: 100%;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
-    margin: 0px 0px 0px -5px;
+    top: 25%;
+    left: 20%;
   }
   .contenedor .accordion .whatsApp {
     width: 100%;
   }
 }
 @media (max-width: 326px) {
-  .contenedor .containerDevelopment .vacanciesDevelopment .cardJob, .contenedor .containerDevelopment .vacanciesDesig .cardJob, .contenedor .containerDesign .vacanciesDevelopment .cardJob, .contenedor .containerDesign .vacanciesDesig .cardJob {
+  .contenedor .containerDevelopment .vacanciesDevelopment .cardJob, .contenedor .containerDevelopment .vacanciesDesign .cardJob, .contenedor .containerDesign .vacanciesDevelopment .cardJob, .contenedor .containerDesign .vacanciesDesign .cardJob {
     width: 100%;
     margin: auto;
   }
   .contenedor .containerTestimony .bundleOpinion .groupLine .cardOpinionShort .opinionBottom .data {
-    margin: 0px 0px 0px -20px;
+    top: 25%;
+    left: 20%;
   }
 }
 
