--- a/scss/_testimony.scss
+++ b/scss/_testimony.scss
@@ -47,98 +47,98 @@
             flex-direction: row;
             justify-content: center;
             margin: $neutralMargin;
-                .cardOpinionShort{
-                    width:32%;
-                    color: $tertiaryColor;
-                    background-color: $cardColor;
-                    border-radius:10px;
-                    display: flex;
-                    flex-direction: column;
-                    align-items: center;
-                    box-shadow: 0 0 10px 2px $shadowColor;
-                    margin: 7px;
-                    text-align: left;
-                    .opinionTop{
-                        width: $breakPointMax;
-                        display: flex;
-                        flex-direction: row;
-                        justify-content: space-between;
-                        align-items: center;
-                        padding:10px;
-                        .quotationMark{
-                            opacity: .1;
-                        }
-                        .rating{
-                            width: 30%;
-                            filter: drop-shadow(0px 0px 2px);
-                            opacity: .8;
-                        }
-                    }
-                }
-                .opinionMedium{
+            .cardOpinionShort{
+                width:32%;
+                color: $tertiaryColor;
+                background-color: $cardColor;
+                border-radius:10px;
+                display: flex;
+                flex-direction: column;
+                align-items: center;
+                box-shadow: 0 0 10px 2px $shadowColor;
+                margin: 7px;
+                text-align: left;
+                .opinionTop{
                     width: $breakPointMax;
-                    padding: 10px 10px;
-                    border-top: 1px solid $lineColor;
-                    border-bottom: 1px solid $lineColor;
-                    .paragraph{
-                        font-size: $smallTitle;
-                        color:$tertiaryColor;
-                    }
-                }
-                .opinionBottom{
-                    width:$breakPointMax;
                     display: flex;
                     flex-direction: row;
                     justify-content: space-between;
                     align-items: center;
-                    padding: 10px 0px;
-                    position: relative;
-                    .user{
-                        width: 15%;
+                    padding:10px;
+                    .quotationMark{
+                        opacity: .1;
                     }
-                    .data{
-                        position: absolute;
-                        top: 12px;
-                        left: 60px;
-                        p{
-                            font-size: $xSmallParagraphText;
-                            color:$tertiaryColor;
-                            margin-bottom:0px;
-                        }
+                    .rating{
+                        width: 30%;
+                        filter: drop-shadow(0px 0px 2px);
+                        opacity: .8;
                     }
-                    .socialMedia{
-                        align-self: flex-end;
-                        a{
-                            text-decoration: none;
-                        }
-                        .iconLink{
+                }
+            }
+            .opinionMedium{
+                width: $breakPointMax;
+                padding: 10px 10px;
+                border-top: 1px solid $lineColor;
+                border-bottom: 1px solid $lineColor;
+                .paragraph{
+                    font-size: $breakText;
+                    color:$tertiaryColor;
+                }
+            }
+            .opinionBottom{
+                width:$breakPointMax;
+                display: flex;
+                flex-direction: row;
+                justify-content: space-between;
+                align-items: center;
+                padding: 30px 0px;
+                position: relative;
+                .user{
+                    width: 15%;
+                }
+                .data{
+                    position: absolute;
+                    top: 25%;
+                    left: 20%;
+                    p{
+                        font-size: $smallTitle;
+                        color:$tertiaryColor;
+                        margin-bottom:0px;
+                    }
+                }
+                .socialMedia{
+                    align-self: flex-end;
+                    a{
+                        text-decoration: none;
+                    }
+                    .iconLink{
                             width: 20px;
-                        }
                     }
                 }
             }
         }
-        .verMas{
-            width:20%;
-            font-size: $regularText;
-            text-align: center;
-            color: $whiteColor;
-            background-color: $primaryColor;
-            border:1px solid $primaryColor;
-            border-radius: 50px;
-            cursor: pointer;
-            margin-top:60px;
-            padding:  $paddingCto;
-            text-decoration: none;
-            font-family: $mainFont;
-            font-weight: $bold;
-            transition: all 0.3s ease-in-out;
-            &:hover{
-                background-color:$hoverColor;
-                border:1px solid $hoverColor;
-                color: $primaryColor;
-                box-shadow: 0 0 10px $primaryColor;
-                text-shadow: 0 0 10px $primaryColor;
-            }
+    }
+    .verMas{
+        width:20%;
+        font-size: $regularText;
+        text-align: center;
+        color: $whiteColor;
+        background-color: $primaryColor;
+        border:1px solid $primaryColor;
+        border-radius: 50px;
+        cursor: pointer;
+        margin-top:60px;
+        padding:  $paddingCto;
+        text-decoration: none;
+        font-family: $mainFont;
+        font-weight: $bold;
+        transition: all 0.3s ease-in-out;
+        &:hover{
+            background-color:$hoverColor;
+            border:1px solid $hoverColor;
+            color: $primaryColor;
+            box-shadow: 0 0 10px $primaryColor;
+            text-shadow: 0 0 10px $primaryColor;
         }
     }
+}
